# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "displayid"
version = "0.1.0"
authors = ["Jeremy Cline <jeremy@jcline.org>"]
edition = "2018"
description = "A DisplayID and EDID parsing library"
readme = "README.md"
repository = "https://github.com/jeremycline/displayid.git"
license = "MIT"
keywords = ["edid", "displayid", "graphics", "display"]
categories = ["graphics", "parser-implementations"]

[lib]
name = "displayid"
crate-type = ["lib", "cdylib"]

[dependencies]
thiserror = "1.0"

[build-dependencies]
cbindgen = "0.21"